# SDLStarter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  hello_SDL.cpp
